Kleopatra: gpg-agent is started too early
Closed, ResolvedPublic

Assigned To
Authored By
• ikloecker
Jul 13 2022, 2:23 PM
Tags
Subscribers

Description

When Kleopatra is started, then the following warning is logged:

org.kde.pim.libkleo: agentIsRunning : Creating context for Assuan engine failed: Not operational (code: 176, source: Unspecified source)

This error code is returned, if GpgME has not yet been initialized. Apparently, the check for a running gpg-agent happens to early.

Revisions and Commits

Event Timeline

• ikloecker triaged this task as Normal priority.
• ikloecker created this task.
• ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
• ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.