Initialize GpgME earlier

GpgME has to be initialized before KleopatraApplication::init() is called
because init() uses GpgME. Therefore, we move the initialization of GpgME
shortly after the instantiation of KleopatraApplication (which is needed
if we have to show the error message).

GnuPG-bug-id: 6075